<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView">

    <LinearLayout  android:layout_width="match_parent"
        android:layout_height="match_parent" tools:context="pedina.pedina.BusinessCardFragment"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/businesscard_title"
                android:id="@+id/textView55"
                android:textColor="#ff000000"
                android:textStyle="bold"
                android:textSize="30dp"
                android:textIsSelectable="true"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/businesscard_desc"
                android:id="@+id/textView60"
                android:textColor="#ff000000"
                android:textSize="12dp"
                android:textIsSelectable="true" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dp">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/horizontalScrollView" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="310dp"
                        android:layout_height="270dp"
                        android:id="@+id/imageView15"
                        android:src="@drawable/business_card_2"
                        android:adjustViewBounds="false"
                        android:baselineAlignBottom="false"
                        android:clickable="false"
                        android:cropToPadding="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:layout_marginLeft="26dp" />

                    <ImageView
                        android:layout_width="310dp"
                        android:layout_height="270dp"
                        android:id="@+id/imageView18"
                        android:src="@drawable/business_card_1"
                        android:adjustViewBounds="false"
                        android:baselineAlignBottom="false"
                        android:clickable="false"
                        android:cropToPadding="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:layout_marginLeft="26dp" />

                    <ImageView
                        android:layout_width="310dp"
                        android:layout_height="270dp"
                        android:id="@+id/imageView14"
                        android:src="@drawable/wallet"
                        android:layout_marginLeft="26dp"
                        android:paddingRight="20dp" />

                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView17"
                    android:src="@drawable/icon_gps"
                    android:padding="5dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/businesscard_gps_title"
                        android:id="@+id/textView" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/businesscard_gps_desc"
                        android:id="@+id/textView15" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView21"
                    android:src="@drawable/icon_bluetooth"
                    android:padding="5dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/businesscard_bt_title"
                        android:id="@+id/textView6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/businesscard_bt_desc"
                        android:id="@+id/textView18" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView25"
                    android:src="@drawable/icon_battery"
                    android:padding="5dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/businesscard_wc_title"
                        android:id="@+id/textView19" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/businesscard_wc_desc"
                        android:id="@+id/textView20" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView24"
                    android:src="@drawable/icon_build"
                    android:padding="5dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp" >

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/businesscard_3p_title"
                        android:id="@+id/textView35" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/businesscard_3p_desc"
                        android:id="@+id/textView36" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView30"
                    android:src="@drawable/icon_secure"
                    android:padding="5dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp" >

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/businesscard_as_title"
                        android:id="@+id/textView40" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/businesscard_as_desc"
                        android:id="@+id/textView50" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</ScrollView>