<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView">

    <LinearLayout  android:layout_width="match_parent"
        android:layout_height="match_parent" tools:context="pedina.pedina.ForWhoYouLoveFragment"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/forwhoyoulove_title"
                android:id="@+id/textView81"
                android:textColor="#ff000000"
                android:textStyle="bold"
                android:textSize="30dp"
                android:textIsSelectable="true"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/forwhoyoulove_desc"
                android:id="@+id/textView81"
                android:textColor="#ff000000"
                android:textSize="8dp"
                android:textIsSelectable="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dp">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/horizontalScrollView" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="310dp"
                        android:layout_height="270dp"
                        android:id="@+id/imageView15"
                        android:src="@drawable/children"
                        android:adjustViewBounds="false"
                        android:baselineAlignBottom="false"
                        android:clickable="false"
                        android:cropToPadding="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:padding="20dp"
                        android:layout_marginLeft="26dp" />

                    <ImageView
                        android:layout_width="310dp"
                        android:layout_height="270dp"
                        android:id="@+id/imageView18"
                        android:src="@drawable/pets"
                        android:adjustViewBounds="false"
                        android:baselineAlignBottom="false"
                        android:clickable="false"
                        android:cropToPadding="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:padding="20dp"
                        android:layout_marginLeft="26dp" />

                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView17"
                    android:src="@drawable/icon_user"
                    android:padding="5dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/forwhoyoulove_awy_title"
                        android:id="@+id/textView" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/forwhoyoulove_awy_desc"
                        android:id="@+id/textView15" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView21"
                    android:src="@drawable/icon_arealimit"
                    android:padding="5dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/forwhoyoulove_al_title"
                        android:id="@+id/textView6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/forwhoyoulove_al_desc"
                        android:id="@+id/textView18" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView25"
                    android:src="@drawable/icon_wearable"
                    android:padding="5dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/forwhoyoulove_w_title"
                        android:id="@+id/textView19" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/forwhoyoulove_w_desc"
                        android:id="@+id/textView20" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</ScrollView>